<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sectionSettings"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="@style/DrivehubSettingsSectionHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:text="@string/settings_section_driving" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/DrivehubSettingsPrimaryText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/settings_overlay_on_signal" />

        <Switch
            style="@style/DrivehubSettingsSwitch"
            android:id="@+id/switchOverlayOnSignal"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:background="@color/settings_divider" />

    <TextView
        style="@style/DrivehubSettingsSectionHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:text="@string/settings_section_display" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/DrivehubSettingsPrimaryText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/show_safety_warning" />

        <Switch
            style="@style/DrivehubSettingsSwitch"
            android:id="@+id/switchSafetyWarning"
            />

    </LinearLayout>
</LinearLayout>
